--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -26,7 +26,7 @@ jobs:
    
       - name: Tag image and push to Azure Container Registry
         run: |
-            az acr login --name ${{ env.REGISTRY_NAME }}
+            az acr login --name ${{ env.REPOSITORY_NAME }}
             docker build -t ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.REPOSITORY_NAME }}:${{ github.sha }} . 
             docker push ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.REPOSITORY_NAME }}:${{ github.sha }}
 
